@@ -12,6 +12,9 @@ What's New in Python 2.6.6 alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #8329: Don't return the same lists from select.select when no fds are
+  changed.
+
 - Raise a TypeError when trying to delete a T_STRING_INPLACE struct member.
 
 - Issue #1583863: An unicode subclass can now override the __unicode__ method
